SUBDIRS = . config fbi network test

noinst_LIBRARIES = libmcrouter.a

libmcrouter_a_SOURCES = \
  AuxiliaryCPUThreadPool.h \
  AuxiliaryCPUThreadPool.cpp \
  CacheClientStats.h \
  Ch3HashFunc.h \
  Clocks.cpp \
  Clocks.h \
  Compression.cpp \
  Compression.h \
  CompressionCodecManager.cpp \
  CompressionCodecManager.h \
  Crc32HashFunc.h \
  FailoverErrorsSettingsBase.cpp \
  FailoverErrorsSettingsBase.h \
  FailoverErrorsSettings.h \
  HashUtil.h \
  IOBufUtil.cpp \
  IOBufUtil.h \
  IovecCursor-inl.h \
  IovecCursor.cpp \
  IovecCursor.h \
  Lz4CompressionCodec.cpp \
  Lz4CompressionCodec.h \
  Lz4Immutable.cpp \
  Lz4Immutable.h \
  Lz4ImmutableCompressionCodec.cpp \
  Lz4ImmutableCompressionCodec.h \
  MessageQueue.cpp \
  MessageQueue.h \
  McOpList.h \
  McOperation.h \
  McOperationTraits.h \
  McResUtil.h \
  Operation.h \
  OperationTraits.h \
  Ref.h \
  RendezvousHashFunc.cpp \
  RendezvousHashFunc.h \
  Reply.h \
  RouteHandleTraverser.h \
  SelectionRouteFactory.h \
  StatsReply.cpp \
  StatsReply.h \
  WeightedCh3HashFunc.cpp \
  WeightedCh3HashFunc.h \
  ZstdCompressionCodec.cpp \
  ZstdCompressionCodec.h \
  carbon/Fields.h \
  carbon/CarbonQueueAppender.cpp \
  carbon/CarbonQueueAppender.h \
  carbon/CarbonProtocolCommon.h \
  carbon/CarbonProtocolReader.cpp \
  carbon/CarbonProtocolReader.h \
  carbon/CarbonProtocolWriter.h \
  carbon/CommonSerializationTraits.h \
  carbon/Keys-inl.h \
  carbon/Keys.h \
  carbon/NoopAdditionalLogger.h \
  carbon/ReplyCommon.h \
  carbon/RequestCommon.h \
  carbon/RequestReplyUtil.h \
  carbon/Result.h \
  carbon/SerializationTraits.h \
  carbon/Stats.h \
  carbon/TypeList-inl.h \
  carbon/TypeList.h \
  carbon/Util.h \
  carbon/Variant.h \
  config/ConfigPreprocessor.cpp \
  config/ConfigPreprocessor.h \
  config/ImportResolverIf.h \
  config/RendezvousHash.cpp \
  config/RendezvousHash.h \
  config/RouteHandleBuilder.h \
  config/RouteHandleFactory-inl.h \
  config/RouteHandleFactory.h \
  config/RouteHandleProviderIf.h \
  debug/ConnectionFifo.cpp \
  debug/ConnectionFifo.h \
  debug/ConnectionFifoProtocol.cpp \
  debug/ConnectionFifoProtocol.h \
  debug/Fifo.cpp \
  debug/Fifo.h \
  debug/FifoManager.cpp \
  debug/FifoManager.h \
  fbi/counting_sem.c \
  fbi/counting_sem.h \
  fbi/cpp/FuncGenerator.h \
  fbi/cpp/LogFailure.cpp \
  fbi/cpp/LogFailure.h \
  fbi/cpp/Trie-inl.h \
  fbi/cpp/Trie.h \
  fbi/cpp/TypeList-inl.h \
  fbi/cpp/TypeList.h \
  fbi/cpp/globals.cpp \
  fbi/cpp/globals.h \
  fbi/cpp/ParsingUtil.cpp \
  fbi/cpp/ParsingUtil.h \
  fbi/cpp/sfrlock.h \
  fbi/cpp/util.cpp \
  fbi/cpp/util.h \
  fbi/decls.h \
  fbi/hash.c \
  fbi/hash.h \
  fbi/network.c \
  fbi/network.h \
  fbi/queue.h \
  fbi/sfrlock.c \
  fbi/sfrlock.h \
  fbi/time.h \
  fbi/util.h \
  mc/msg.cpp \
  mc/msg.h \
  mc/protocol.h \
  mc/umbrella.c \
  mc/umbrella.h \
  mc/umbrella_conv.h \
  network/AccessPoint.cpp \
  network/AccessPoint.h \
  network/AsciiSerialized-inl.h \
  network/AsciiSerialized.cpp \
  network/AsciiSerialized.h \
  network/AsyncMcClient-inl.h \
  network/AsyncMcClient.h \
  network/AsyncMcClientImpl-inl.h \
  network/AsyncMcClientImpl.cpp \
  network/AsyncMcClientImpl.h \
  network/AsyncMcServer.cpp \
  network/AsyncMcServer.h \
  network/AsyncMcServerWorker.cpp \
  network/AsyncMcServerWorker.h \
  network/AsyncMcServerWorkerOptions.h \
  network/CarbonMessageDispatcher.h \
  network/CarbonMessageList.h \
  network/CarbonMessageTraits.h \
  network/CarbonRequestHandler.h \
  network/CaretHeader.h \
  network/CaretSerializedMessage-inl.h \
  network/CaretSerializedMessage.h \
  network/ClientMcParser-inl.h \
  network/ClientMcParser.h \
  network/CongestionController.cpp \
  network/CongestionController.h \
  network/ConnectionOptions.h \
  network/ConnectionTracker.cpp \
  network/ConnectionTracker.h \
  network/CpuController.cpp \
  network/CpuController.h \
  network/gen/CommonMessages-inl.h \
  network/gen/CommonMessages.cpp \
  network/gen/CommonMessages.h \
  network/gen/MemcacheMessages-inl.h \
  network/gen/MemcacheMessages.cpp \
  network/gen/MemcacheMessages.h \
  network/McAsciiParser-gen.cpp \
  network/McAsciiParser-inl.h \
  network/McAsciiParser.cpp \
  network/McAsciiParser.h \
  network/McClientRequestContext-inl.h \
  network/McClientRequestContext.cpp \
  network/McClientRequestContext.h \
  network/McParser.cpp \
  network/McParser.h \
  network/McSerializedRequest.cpp \
  network/McSerializedRequest.h \
  network/McServerRequestContext-inl.h \
  network/McServerRequestContext.cpp \
  network/McServerRequestContext.h \
  network/McServerSession.cpp \
  network/McServerSession.h \
  network/McServerSSLUtil.cpp \
  network/McServerSSLUtil.h \
  network/MemcacheMessageHelpers.h \
  network/MemoryController.cpp \
  network/MemoryController.h \
  network/MultiOpParent.cpp \
  network/MultiOpParent.h \
  network/ServerLoad.cpp \
  network/ServerLoad.h \
  network/ServerMcParser-inl.h \
  network/ServerMcParser.h \
  network/ThreadLocalSSLContextProvider.cpp \
  network/ThreadLocalSSLContextProvider.h \
  network/UmbrellaProtocol.cpp \
  network/UmbrellaProtocol.h \
  network/UniqueIntrusiveList.h \
  network/WriteBuffer.cpp \
  network/WriteBuffer.h \
  routes/AllAsyncRoute.h \
  routes/AllFastestRoute.h \
  routes/AllInitialRoute.h \
  routes/AllMajorityRoute.h \
  routes/AllSyncRoute.h \
  routes/LoadBalancerRoute.h \
  routes/LoggingRoute.h \
  routes/MigrateRoute.h \
  routes/NullRoute.h \
  routes/RandomRoute.h \
  routes/SelectionRoute.h

libmcrouter_a_CPPFLAGS = -I$(top_srcdir)/..
libmcrouter_a_CFLAGS = -I$(top_srcdir)/..

# build gtest on check
check_LTLIBRARIES = libtestmain.la
check_PROGRAMS =

libtestmain_la_CPPFLAGS = -Igtest/include -Igtest
libtestmain_la_SOURCES = TestMain.cpp gtest/src/gtest-all.cc
libtestmain_la_LIBADD = -lfolly -lfollyinit
